# wasmagent-protocol

./: .gitignore  BOT_STATE.md  CLAUDE.md  CODEOWNERS  README.md  biome.json  consumers.json  index.d.ts  index.js  package-lock.json  package.json  pyproject.toml
.claude-bot/: verify.yml
.github/workflows/: conformance.yml  release.yml
aep-conformance/: README.md  manifest.json
aep-conformance/invalid/: bad-capability-decision.json  bad-schema-version.json  bad-timestamp-type.json  missing-action-required.json  missing-created-at-ms.json  missing-run-id.json  missing-signature-required.json
aep-conformance/valid/: minimal.json  v0.1.json  with-budget-ledger.json  with-capabilities.json  with-refs.json
docs/: 15-milestones.md  CONTRACT-CHANGE-PROCESS.md  GOVERNANCE.md
schemas/: index.json
schemas/aep/: aep-record.schema.json  checkpoint-evidence.schema.json
schemas/agentbom/: agentbom-v0.1.md  agentbom.schema.json
schemas/compliance/: compliance-eval-record.schema.json  constraint-ir.schema.json  constraint-violation.schema.json  repair-trace.schema.json  rollout-wire.schema.json  task-spec.schema.json
schemas/mcp-posture/: mcp-posture.schema.json  posture-model-v0.1.md
schemas/trust-passport/: passport-v0.1.md  rfc-multi-party-negotiation.md  trust-passport.schema.json
schemas/v0.1/: canonical-event.schema.json
src/wasmagent_protocol/: __init__.py
tests/: conformance.py  loader.test.js  test_aep_conformance.py  test_conformance.py
tests/fixtures/invalid/aep-record/: example.json
tests/fixtures/invalid/agentbom/: missing-version.json
(+22 files in other folders)
