[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wasmagent-protocol"
version = "0.1.0"
description = "Canonical JSON Schemas for the WasmAgent Agent Evidence Protocol (AEP) and compliance contracts. Single source of truth across the WasmAgent org."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["wasmagent", "aep", "agent-evidence-protocol", "json-schema", "compliance", "provenance"]
authors = [{ name = "WasmAgent" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
validate = ["jsonschema>=4.0"]

[project.urls]
Homepage = "https://github.com/WasmAgent/wasmagent-protocol"
Issues = "https://github.com/WasmAgent/wasmagent-protocol/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/wasmagent_protocol"]

# Ship the canonical schema JSON alongside the loader so get_schema() works
# from an installed wheel.
[tool.hatch.build.targets.wheel.force-include]
"schemas" = "wasmagent_protocol/schemas"
